color contrast fixes

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   }
   
 .title{
-    color: #ff7dcb;
+    color: #b9376b;
     font-size: 36px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center;
@@ -14,7 +14,7 @@ body {
   }
   
 .smaller-title{
-    color: #ff7dcb;
+    color: #b9376b;
     font-size: 28px;
     text-align: center;
     font-family:Georgia, 'Times New Roman', Times, serif;
